force-app/main/default/objects/Locobuzz_Project_Spocs__c/Locobuzz_Project_Spocs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Locobuzz Project Spocs</label>
</CustomObject>