force-app/main/default/objects/Locobuzz_Project_Spocs__c/fields/L1_Spoc_Email__c.field-meta.xml
<CustomField>
    <fullName>L1_Spoc_Email__c</fullName>
    <label>L1 Spoc Email</label>
    <type>Email</type>
</CustomField>