force-app/main/default/objects/Locobuzz_Project_Spocs__c/fields/L1_Spoc_Name__c.field-meta.xml
<CustomField>
    <fullName>L1_Spoc_Name__c</fullName>
    <label>L1 Spoc Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>