force-app/main/default/objects/Locobuzz_Project_Spocs__c/fields/L2_Spoc_Email__c.field-meta.xml
<CustomField>
    <fullName>L2_Spoc_Email__c</fullName>
    <label>L2 Spoc Email</label>
    <type>Email</type>
</CustomField>