force-app/main/default/objects/Locobuzz_Project_Spocs__c/fields/L3_Spoc_Email__c.field-meta.xml
<CustomField>
    <fullName>L3_Spoc_Email__c</fullName>
    <label>L3 Spoc Email</label>
    <type>Email</type>
</CustomField>