force-app/main/default/objects/Locobuzz_Project_Spocs__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <label>Tower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>